fix bugs on small screen

--- a/style.css
+++ b/style.css
@@ -524,6 +524,15 @@ button:hover {
   filter: saturate(0.2);
 }
 
+@media screen and (max-width: 400px) {
+  .aside {
+    line-height: 1.5;
+  }
+  .aside--next-post {
+    margin: 50px 0 20px 0;
+  }
+}
+
 /* slider styles */
 
 .container {
